Subindo alterações com modal aparecendo o xml sem as validações

--- a/emissaoNFEFront/package.json
+++ b/emissaoNFEFront/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vkbeautify": "^0.99.3",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/vkbeautify": "^0.99.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
